--- a/index.html
+++ b/index.html
@@ -190,8 +190,11 @@
 									<div class="title"><h3>Our Vision</h3></div>
 									<div class="text">
 										<p>
-											Most common methods for designing websites that work well
-											on desktop is responsive and adaptive design.
+											Our solve <strong>Vision</strong> is to create
+											unforgettable experiences through the art of lighting and
+											also revolutionize the entertainment industry with the
+											most advanced and dynamic lighting technology, setting new
+											standards for creativity, sustainability and performance.
 										</p>
 									</div>
 								</div>
@@ -204,8 +207,8 @@
 									<div class="title"><h3>Our Mission</h3></div>
 									<div class="text">
 										<p>
-											Most common methods for designing websites that work well
-											on desktop is responsive and adaptive design.
+											To become the leading provider of sustainable and most
+											advanced lighting solutions in the event space.
 										</p>
 									</div>
 								</div>
@@ -218,8 +221,9 @@
 									<div class="title"><h3>Our Values</h3></div>
 									<div class="text">
 										<p>
-											Most common methods for designing websites that work well
-											on desktop is responsive and adaptive design.
+											We are committed to sustainability, safety and creativity
+											and to build long-term relationships with our clients
+											based on trust, integrity and excellence.
 										</p>
 									</div>
 								</div>
@@ -261,15 +265,14 @@
 					<div class="about-details-info col-md-6 col-sm-12">
 						<div class="role">
 							<span>We are LMV-Pro Lights</span>
-							<h3>I Can Design Anything You Want</h3>
+							<h3>We raise the bar and set the standards!</h3>
 						</div>
 						<div class="role-details">
 							<p id="hire-us">
-								Hello there! I'm a web designer, and I'm very passionate and
-								dedicated to my work. With 20 years experience as a professional
-								web developer, I have acquired the skills and knowledge
-								necessary to make your project a success. I enjoy every step of
-								the design process, from discussion and collaboration.
+								Here at LMV-Pro Lights, we provide innovative ideas that
+								continually lead us to achieving unconventional designs that
+								reach far beyond the predictable expectations in line with any
+								events brief!
 							</p>
 						</div>
 						<div class="hire">
@@ -296,12 +299,7 @@
 					<div class="portfolio-head">
 						<span>Our Portfolio</span>
 						<h3>Our Amazing Works</h3>
-						<p>
-							Here at LMV-Pro Lights, we provide innovative ideas that
-							continually lead us to achieving unconventional designs that reach
-							far beyond the predictable expectations in line with any events
-							brief!
-						</p>
+						<p></p>
 					</div>
 					<div class="portfolio-links">
 						<ul>
@@ -333,27 +331,27 @@
 							>
 
 							<a
-								href="./gallery/pictures/concert_2.JPG"
+								href="./gallery/pictures/concert_2.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_3.JPG"
+								href="./gallery/pictures/concert_3.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_4.JPG"
+								href="./gallery/pictures/concert_4.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_5.JPG"
+								href="./gallery/pictures/concert_5.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_6.JPG"
+								href="./gallery/pictures/concert_6.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_7.JPG"
+								href="./gallery/pictures/concert_7.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
@@ -383,41 +381,41 @@
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_2.JPG"
+								href="./gallery/pictures/others_2.jpg"
 								data-lightbox="allGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_3.JPG"
+								href="./gallery/pictures/others_3.jpg"
 								data-lightbox="allGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_4.JPG"
+								href="./gallery/pictures/others_4.jpg"
 								data-lightbox="allGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_5.JPG"
+								href="./gallery/pictures/others_5.jpg"
 								data-lightbox="allGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_6.JPG"
+								href="./gallery/pictures/others_6.jpg"
 								data-lightbox="allGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_7.JPG"
+								href="./gallery/pictures/others_7.jpg"
 								data-lightbox="allGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_8.JPG"
+								href="./gallery/pictures/others_8.jpg"
 								data-lightbox="allGallery"
 							></a>
 							<a
-								href="./gallery/pictures/others_9.JPG"
+								href="./gallery/pictures/others_9.jpg"
 								data-lightbox="allGallery"
 							></a>
 						</div>
@@ -432,27 +430,27 @@
 								<span> Concerts </span></a
 							>
 							<a
-								href="./gallery/pictures/concert_2.JPG"
+								href="./gallery/pictures/concert_2.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_3.JPG"
+								href="./gallery/pictures/concert_3.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_4.JPG"
+								href="./gallery/pictures/concert_4.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_5.JPG"
+								href="./gallery/pictures/concert_5.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_6.JPG"
+								href="./gallery/pictures/concert_6.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
-								href="./gallery/pictures/concert_7.JPG"
+								href="./gallery/pictures/concert_7.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
@@ -510,41 +508,41 @@
 							>
 
 							<a
-								href="./gallery/pictures/others_2.JPG"
+								href="./gallery/pictures/others_2.jpg"
 								data-lightbox="ourGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_3.JPG"
+								href="./gallery/pictures/others_3.jpg"
 								data-lightbox="ourGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_4.JPG"
+								href="./gallery/pictures/others_4.jpg"
 								data-lightbox="ourGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_5.JPG"
+								href="./gallery/pictures/others_5.jpg"
 								data-lightbox="ourGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_6.JPG"
+								href="./gallery/pictures/others_6.jpg"
 								data-lightbox="ourGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_7.JPG"
+								href="./gallery/pictures/others_7.jpg"
 								data-lightbox="ourGallery"
 							>
 							</a>
 							<a
-								href="./gallery/pictures/others_8.JPG"
+								href="./gallery/pictures/others_8.jpg"
 								data-lightbox="ourGallery"
 							></a>
 							<a
-								href="./gallery/pictures/others_9.JPG"
+								href="./gallery/pictures/others_9.jpg"
 								data-lightbox="ourGallery"
 							></a>
 						</div>
@@ -557,100 +555,100 @@
 							</div>
 							<div class="video-list" id="videos">
 								<video
-									src="./gallery/videos/vid_1.MP4"
+									src="./gallery/videos/vid_1.mp4"
 									muted
 									class="active-video"
 								></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_5.MP4" muted></video>
+								<video src="./gallery/videos/vid_5.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_6.MP4" muted></video>
+								<video src="./gallery/videos/vid_6.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_7.MP4" muted></video>
+								<video src="./gallery/videos/vid_7.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_8.MP4" muted></video>
+								<video src="./gallery/videos/vid_8.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_9.MP4" muted></video>
+								<video src="./gallery/videos/vid_9.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_10.MP4" muted></video>
+								<video src="./gallery/videos/vid_10.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_11.MP4" muted></video>
+								<video src="./gallery/videos/vid_11.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_13.MP4" muted></video>
+								<video src="./gallery/videos/vid_13.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_14.MP4" muted></video>
+								<video src="./gallery/videos/vid_14.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_15.MP4" muted></video>
+								<video src="./gallery/videos/vid_15.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_16.MP4" muted></video>
+								<video src="./gallery/videos/vid_16.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_17.MP4" muted></video>
+								<video src="./gallery/videos/vid_17.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_18.MP4" muted></video>
+								<video src="./gallery/videos/vid_18.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_21.MP4" muted></video>
+								<video src="./gallery/videos/vid_21.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_23.MP4" muted></video>
+								<video src="./gallery/videos/vid_23.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_24.MP4" muted></video>
+								<video src="./gallery/videos/vid_24.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_25.MP4" muted></video>
+								<video src="./gallery/videos/vid_25.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_26.MP4" muted></video>
+								<video src="./gallery/videos/vid_26.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_27.MP4" muted></video>
+								<video src="./gallery/videos/vid_27.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_28.MP4" muted></video>
+								<video src="./gallery/videos/vid_28.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_30.MP4" muted></video>
+								<video src="./gallery/videos/vid_30.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_31.MP4" muted></video>
+								<video src="./gallery/videos/vid_31.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_32.MP4" muted></video>
+								<video src="./gallery/videos/vid_32.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_33.MP4" muted></video>
+								<video src="./gallery/videos/vid_33.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_35.MP4" muted></video>
+								<video src="./gallery/videos/vid_35.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_36.MP4" muted></video>
+								<video src="./gallery/videos/vid_36.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_37.MP4" muted></video>
+								<video src="./gallery/videos/vid_37.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 
-								<video src="./gallery/videos/vid_38.MP4" muted></video>
+								<video src="./gallery/videos/vid_38.mp4" muted></video>
 								<!-- <span>Video's Caption</span> -->
 							</div>
 
 							<div class="main-video">
 								<video
-									src="./gallery/videos/vid_1.MP4"
+									src="./gallery/videos/vid_1.mp4"
 									autoplay
 									muted
 									controls
