--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#about" class="active links">About Us</a></li>
 						<li><a href="#portfolio" class="active links">Portfolio</a></li>
 						<li><a href="#service" class="active links">Services</a></li>
-						<li><a href="#blog" class="active links">Updates</a></li>
+						<!-- <li><a href="#blog" class="active links">Updates</a></li> -->
 						<li><a href="#contact" class="active links">Contact</a></li>
 						<li class="hire-us">
 							<a href="#hire-us" class="active links"><span>Hire Us</span></a>
@@ -51,7 +51,7 @@
 				<li><a href="#about" class="links">About Us</a></li>
 				<li><a href="#portfolio" class="links">Portfolio</a></li>
 				<li><a href="#service" class="links">Services</a></li>
-				<li><a href="#blog" class="links">Updates</a></li>
+				<!-- <li><a href="#blog" class="links">Updates</a></li> -->
 				<li><a href="#contact" class="links">Contact</a></li>
 				<li class="hire-us">
 					<a href="#hire-us" class="links"><span>Hire Us</span></a>
@@ -108,32 +108,32 @@
 						</div>
 						<div class="social">
 							<ul>
-								<li>
+								<!-- <li>
 									<a href="https://facebook.com/rickofar" target="_blank"
 										><img
 											src="./img/facebook-app-symbol.png"
 											alt="facebook"
 											id="facebook"
 									/></a>
-								</li>
-								<li>
+								</li> -->
+								<!-- <li>
 									<a href="https://twitter.com/rickofar1" target="_blank"
 										><img src="./img/twitter.png" alt="twitter" id="twitter"
 									/></a>
-								</li>
+								</li> -->
 								<li>
-									<a href="https://instagram.com/rickofar" target="_blank"
+									<a href="https://instagram.com/lmvpro_lights" target="_blank"
 										><img
 											src="./img/instagram.png"
 											alt="instagram"
 											id="instagram"
 									/></a>
 								</li>
-								<li>
+								<!-- <li>
 									<a href="https://snapchat.com/add/rickofar" target="_blank"
 										><img src="./img/snapchat.png" alt="snapchat" id="snapchat"
 									/></a>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 					</div>
@@ -667,11 +667,12 @@
 
 				<div class="portfolio-design row">
 					<div class="design-details col-md-6 col-sm-12">
-						<span>Design is Life</span>
-						<h3>I Develop Skills Regularly to Keep Me Update</h3>
+						<span>Let There Be Light!</span>
+						<h3>What Our Clients Want is Our Biggest Motivation</h3>
 						<p>
-							Most common methods for designing websites that work well on
-							desktop is responsive and adaptive design
+							Our prompt stage lighting set up is top-notch and years of
+							experience is unmatched. We have over 5-years experience and over
+							100+ success stories.
 						</p>
 						<div>
 							<span class="marker">Concerts</span
@@ -707,10 +708,10 @@
 
 			<div class="service-head">
 				<span>Services</span>
-				<h3>What I Do for Clients</h3>
+				<h3>What <b>LMV-Pro Lights</b> do for clients</h3>
 				<p>
-					Most common methods for designing websites that work well on desktop
-					is responsive and adaptive design
+					Light is as important as life. Can you imagine how boring and gloomy
+					events will look like without <b>Lights</b>?
 				</p>
 			</div>
 			<div class="splash4">
@@ -722,15 +723,14 @@
 					<li>
 						<div class="creative">
 							<div class="creative-image">
-								<img src="./img/creative.png" alt="" />
+								<img src="./img/display_pictures/heart.png" alt="" />
 							</div>
 							<div class="creative-details">
-								<h3>Creative Design</h3>
-								<span>Starts from</span><span class="color"> $99</span>
+								<h3>Weddings</h3>
+								<!-- <span>Whether Day or</span><span class="color"> Night</span> -->
 								<p>
-									Web design refers to the design of websites that are displayed
-									on the internet. It usually refers to the user experience
-									aspects of website development
+									It doesn't matter whether it's traditional or contemporary,
+									indoor or outdoor, day or night...
 								</p>
 							</div>
 						</div>
@@ -738,15 +738,15 @@
 					<li>
 						<div class="creative">
 							<div class="creative-image">
-								<img src="./img/graphics_design.png" alt="" />
+								<img src="./img/display_pictures/lmv-music-01.png" alt="" />
 							</div>
 							<div class="creative-details">
-								<h3>Graphic Design</h3>
-								<span>Starts from</span><span class="color"> $199</span>
+								<h3>Concerts</h3>
+								<!-- <span>Starts from</span><span class="color"> $199</span> -->
 								<p>
-									Web design refers to the design of websites that are displayed
-									on the internet. It usually refers to the user experience
-									aspects of website development
+									Music concerts will be boring without proper lighting systems.
+									Whether indoor or outdoor, from small, medium, large halls to
+									open fields...
 								</p>
 							</div>
 						</div>
@@ -754,20 +754,19 @@
 					<li>
 						<div class="creative">
 							<div class="creative-image">
-								<img src="./img/ux_design.png" alt="" />
+								<img src="./img/display_pictures/lmv-playlist-01.png" alt="" />
 							</div>
 							<div class="creative-details">
-								<h3>UI/UX Design</h3>
-								<span>Starts from</span><span class="color"> $299</span>
+								<h3>Other Events</h3>
+								<!-- <span>Starts from</span><span class="color"> $299</span> -->
 								<p>
-									Web design refers to the design of websites that are displayed
-									on the internet. It usually refers to the user experience
-									aspects of website development
+									Birthdays, music album lunch, beauty pageants, award
+									ceremonies, etc
 								</p>
 							</div>
 						</div>
 					</li>
-					<li>
+					<!-- <li>
 						<div class="creative">
 							<div class="creative-image">
 								<img src="./img/web_design.png" alt="" />
@@ -782,7 +781,7 @@
 								</p>
 							</div>
 						</div>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 
@@ -792,10 +791,11 @@
 
 			<div class="testimonial-head">
 				<span>Testimonials</span>
-				<h3>What My Clients Say</h3>
+				<h3>What Our Clients Say</h3>
 				<p>
-					Most common methods for designing websites that work well on desktop
-					is responsive and adaptive designs
+					Our years of experience have earned us the status of being regarded as
+					one of the best events lighting solution providers. Some of our
+					clients say a lot about our services.
 				</p>
 			</div>
 
@@ -838,13 +838,13 @@
 							<p>
 								I rarely like to write reviews, but the Marketify team truly
 								deserve a standing ovation for their customer support,
-								customisation and most importantly, friendliness and
+								customization and most importantly, friendliness and
 								professionalism. Many thanks once again for everything and hope
 								that I get to deal with you again in the near future.
 							</p>
 							<div class="client">
 								<div class="client-image">
-									<img src="./icon-imgs/4.jpg" alt="" />
+									<img src="./img/Clients/booze_&_bustle.JPG" alt="" />
 								</div>
 								<div class="client-text">
 									<h5>Mike Anderson</h5>
@@ -869,7 +869,7 @@
 							</p>
 							<div class="client">
 								<div class="client-image">
-									<img src="./icon-imgs/3.jpg" alt="" />
+									<img src="./img/Clients/ricky.PNG" alt="" />
 								</div>
 								<div class="client-text">
 									<h5>Keita Smith</h5>
@@ -894,7 +894,7 @@
 							</p>
 							<div class="client">
 								<div class="client-image">
-									<img src="./icon-imgs/6.jpg" alt="" />
+									<img src="./img/Clients/baytown.png" alt="" />
 								</div>
 								<div class="client-text">
 									<h5>Alan Walker</h5>
@@ -935,18 +935,30 @@
 			</div>
 
 			<div class="floating-images-1">
-				<img src="./icon-imgs/1.jpg" alt="" style="width: 70px; height: 70px" />
-				<img src="./icon-imgs/7.jpg" alt="" />
+				<img
+					src="./img/Clients/all_white_canvas_01.png"
+					alt=""
+					style="width: 70px; height: 70px"
+				/>
+				<img src="./img/Clients/black-diamond.JPG" alt="" />
 			</div>
 
 			<div class="floating-images-2">
-				<img src="./icon-imgs/3.jpg" alt="" />
-				<img src="./icon-imgs/5.jpg" alt="" style="width: 45px; height: 45px" />
+				<img src="./img/Clients/densa.PNG" alt="" />
+				<img
+					src="./img/Clients/s.v._concept.png"
+					alt=""
+					style="width: 45px; height: 45px"
+				/>
 			</div>
 
 			<div class="floating-images-3">
-				<img src="./icon-imgs/2.jpg" alt="" style="width: 55px; height: 55px" />
-				<img src="./icon-imgs/6.jpg" alt="" />
+				<img
+					src="./img/Clients/tik-tok-unplugged-01.png"
+					alt=""
+					style="width: 55px; height: 55px"
+				/>
+				<img src="./img/Clients/vibe-lux.JPG" alt="" />
 			</div>
 
 			<div class="spiral-2">
@@ -960,49 +972,49 @@
 					<ul>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/1_005.png" alt="" />
+								<img src="./img/Clients/all_white_canvas_01.png" alt="" />
 								<a class="brand-links" a="" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/2_007.png" alt="" />
+								<img src="./img/Clients/rotpl.png" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/3_003.png" alt="" />
+								<img src="./img/Clients/amapiano-01.png" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/4.png" alt="" />
+								<img src="./img/Clients/baytown.png" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/5.png" alt="" />
+								<img src="./img/Clients/pinpoint.png" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/6_002.png" alt="" />
+								<img src="./img/Clients/densa.PNG" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/7.png" alt="" />
+								<img src="./img/Clients/meekberry-01.png" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
 						<li>
 							<div class="brand-lists">
-								<img src="./brands/8.png" alt="" />
+								<img src="./img/Clients/wera.png" alt="" />
 								<a class="brand-links" href="#"></a>
 							</div>
 						</li>
@@ -1012,7 +1024,7 @@
 		</div>
 
 		<!-- BLOG SECTION -->
-		<div class="blog-section" id="blog">
+		<!-- <div class="blog-section" id="blog">
 			<div class="container" style="padding-left: 0px; padding-right: 0px">
 				<div class="blog-head">
 					<span>From My Blog</span>
@@ -1031,9 +1043,9 @@
 
 			<div class="blog-update row">
 				<ul>
-					<li>
-						<!-- Button trigger modal -->
-						<button
+					<li> -->
+		<!-- Button trigger modal -->
+		<!-- <button
 							type="button"
 							class="btn btn-primary"
 							data-bs-toggle="modal"
@@ -1060,9 +1072,9 @@
 									</div>
 								</div>
 							</div>
-						</button>
-						<!-- Modal -->
-						<div
+						</button> -->
+		<!-- Modal -->
+		<!-- <div
 							class="modal fade"
 							id="exampleModal"
 							tabindex="-1"
@@ -1114,9 +1126,9 @@
 							</div>
 						</div>
 					</li>
-					<li>
-						<!-- Button trigger modal -->
-						<button
+					<li> -->
+		<!-- Button trigger modal -->
+		<!-- <button
 							type="button"
 							class="btn btn-primary"
 							data-bs-toggle="modal"
@@ -1141,9 +1153,9 @@
 									</div>
 								</div>
 							</div>
-						</button>
-						<!-- Modal -->
-						<div
+						</button> -->
+		<!-- Modal -->
+		<!-- <div
 							class="modal fade"
 							id="exampleModal-2"
 							tabindex="-1"
@@ -1194,9 +1206,9 @@
 							</div>
 						</div>
 					</li>
-					<li>
-						<!-- Button trigger modal -->
-						<button
+					<li> -->
+		<!-- Button trigger modal -->
+		<!-- <button
 							type="button"
 							class="btn btn-primary"
 							data-bs-toggle="modal"
@@ -1220,9 +1232,9 @@
 									</div>
 								</div>
 							</div>
-						</button>
-						<!-- Modal -->
-						<div
+						</button> -->
+		<!-- Modal -->
+		<!-- <div
 							class="modal fade"
 							id="exampleModal-3"
 							tabindex="-1"
@@ -1274,9 +1286,9 @@
 						</div>
 					</li>
 				</ul>
-			</div>
+			</div> -->
 
-			<div class="signup">
+		<!-- <div class="signup">
 				<div class="overlay"></div>
 				<div class="signup-wrapper">
 					<div class="signup-title">
@@ -1295,17 +1307,17 @@
 				<img src="./img/1_009.png" alt="" />
 			</div>
 		</div>
-
+ -->
 		<!-- CONTACT SECTION -->
 
 		<div class="contact-section" id="contact">
 			<div class="contact-head">
-				<span>Contact Me</span>
-				<h3>I Want To Hear From You</h3>
-				<p>
+				<span>Contact Us</span>
+				<h3>We love to hear from You</h3>
+				<!-- <p>
 					Please fill out the form on this section to contact with me. Or call
 					between 9:00 a.m. and 8:00 p.m. ET, Monday through Fridays
-				</p>
+				</p> -->
 			</div>
 
 			<div class="contact-details">
@@ -1316,7 +1328,7 @@
 								<img src="./img/location.png" alt="" />
 								<div class="address-details">
 									<h3>Address</h3>
-									<p>20, Somewhere in world</p>
+									<p>1 Okishone Street, Agbarho</p>
 								</div>
 							</div>
 						</li>
@@ -1325,7 +1337,11 @@
 								<img src="./img/email.png" alt="" />
 								<div class="email-details">
 									<h3>Email</h3>
-									<p><a href="mailto:hello@dizme.com">hello@dizme.com</a></p>
+									<p>
+										<a href="mailto:lmvprolights@gmail.com"
+											>lmvprolights@gmail.com</a
+										>
+									</p>
 								</div>
 							</div>
 						</li>
@@ -1334,14 +1350,36 @@
 								<img src="./img/phone.png" alt="" />
 								<div class="phone-details">
 									<h3>Phone</h3>
-									<p><a href="tel:2348012345678"> +234(0)801-234-5678</a></p>
+									<p><a href="tel:2347017003715"> +234(0)701-700-3715</a></p>
 								</div>
 							</div>
 						</li>
 					</ul>
 				</div>
 				<div class="contact-form">
-					<form action="">
+					<div class="floating-whatsapp">
+						<a
+							href="https://wa.me/2347017003715"
+							target="_blank"
+							style="
+								display: table;
+								font-family: sans-serif;
+								text-decoration: none;
+								margin: 1em auto;
+								color: #fff;
+								font-size: 0.9em;
+								padding: 1em 2em 1em 3.5em;
+								border-radius: 2em;
+								font-weight: bold;
+								background: #25d366
+									url('https://tochat.be/click-to-chat-directory/css/whatsapp.svg')
+									no-repeat 1.5em center;
+								background-size: 1.6em;
+							"
+							>Contact con WhatsApp</a
+						>
+					</div>
+					<!-- <form action="">
 						<div class="form">
 							<ul>
 								<li>
@@ -1369,7 +1407,7 @@
 						<div class="submit-button">
 							<a href="#" id="send-btn"><span>Send Now</span></a>
 						</div>
-					</form>
+					</form> -->
 				</div>
 			</div>
 
@@ -1383,7 +1421,7 @@
 				<div class="map-overlay"></div>
 				<div class="map-wrapper">
 					<div class="map-title">
-						<span>This is an Address iFrame</span>
+						<!-- <span>This is an Address iFrame</span>
 						<h3>Read the text below</h3>
 						<p>
 							I am yet to fill up google map iframe information here. So here is
@@ -1394,7 +1432,13 @@
 							the right address, you can: Try again later Check your network
 							connection Check that Firefox has permission to access the web
 							(you might be connected but behind a firewall)
-						</p>
+						</p> -->
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109994.26451356604!2d5.690717487422164!3d5.519763612926097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1041b2ee387d1067%3A0x35957f67d789a763!2sWarri%2C%20Delta!5e0!3m2!1sen!2sng!4v1689350706184!5m2!1sen!2sng"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
 					</div>
 				</div>
 			</div>
@@ -1403,24 +1447,29 @@
 		<footer>
 			<div class="copyright">
 				<p>
-					Developed with love by <strong><a href="#">Marketify</a></strong> ©
-					2022
+					All Rights Reserved <strong><a href="#">LMV-Pro Lights</a></strong> ©
+					2023
 				</p>
 			</div>
-			<div class="policy">
+			<!-- <div class="policy">
 				<p><a href="#"> Terms & Condition</a></p>
 				<p><a href="#"> Privacy Policy</a></p>
-			</div>
-			<p>
-				Class Project Replicated by
+			</div> -->
+			<!-- <p>
+				Designed by
 				<strong
 					><a href="https://github.com/rickofar" target="_blank"
 						>Rick Ofar</a
 					></strong
 				>
-			</p>
+			</p> -->
 		</footer>
-
+		<script
+			data-widget-type="group"
+			defer
+			data-key="9083cb7d-753f-4291-a07e-c3a2a8ae4c62"
+			src="https://widget.tochat.be/bundle.js"
+		></script>
 		<script src="./js/jquery.js"></script>
 		<script src="./bootstrap-5.3.0/js/bootstrap.js"></script>
 		<script src="./js/script.js"></script>
